web: fix project page for dark mode

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -510,3 +510,7 @@ details.foldable[open] summary::before {
     filter: invert(100%) hue-rotate(180deg);
   }
 }
+
+.zuul-table-dark .list-group-item {
+  background-color: #333 !important;
+}
